--- a/M2-D3.html
+++ b/M2-D3.html
@@ -142,27 +142,27 @@ Ex 3) Add a Jumbotron section with the name and the claim of the tour operator a
       <h2>Deal of the Week</h2>
       <div class="row">
         <div class="col-6 col-sm-4 col-xl-3">
-          <div class="card travel">
-            <img
-              src="https://1001freedownloads.s3.amazonaws.com/vector/413996/preview/wm_summer3.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">South Pole</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">15.12.2021 - 22.12.2021</li>
-              <li class="list-group-item">1200 EUR</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Book today</a>
-            </div>
-          </div>
+            <div class="card travel">
+                <img
+                  src="https://1001freedownloads.s3.amazonaws.com/vector/413996/preview/wm_summer3.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">South Pole</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up
+                    the bulk of the card's content.
+                  </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">15.12.2021 - 22.12.2021</li>
+                  <li class="list-group-item">1200 EUR</li>
+                </ul>
+                <div class="card-body">
+                  <a href="#" class="card-link">Book today</a>
+                </div>
+              </div>
         </div>
         <div class="col-6 col-sm-4 col-xl-3">
           <div class="card travel">
@@ -625,9 +625,38 @@ Ex 3) Add a Jumbotron section with the name and the claim of the tour operator a
     >
       <p>
         Magic Tours inc.
-        <button class="btn btn-secondary m-4">Contact us</button>
+        <button type="button" class="btn btn-secondary m-4" data-toggle="modal" data-target="#magicModal" data-whatever="@magictours">Contact us</button>
       </p>
     </footer>
+<!-- MODAL -->
+    <div class="modal fade" id="magicModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-group">
+                  <label for="recipient-name" class="col-form-label">Recipient:</label>
+                  <input type="text" class="form-control" id="recipient-name">
+                </div>
+                <div class="form-group">
+                  <label for="message-text" class="col-form-label">Message:</label>
+                  <textarea class="form-control" id="message-text"></textarea>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Send message</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <script>
       let travels = document.getElementsByClassName("travel");
